--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-speech": "^1.0.2",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.8.2",
+    "react-webcam": "^5.2.4",
+    "react-youtube": "^7.13.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-flask-api": "cd api && venv\\Scripts\\activate && flask run",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://127.0.0.1:5000/"
 }
