--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start-flask-api": "cd api && venv\\Scripts\\activate && flask run",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
